:issue: https://github.com/elastic/apm-agent-python/issues/
:pull: https://github.com/elastic/apm-agent-python/pull/

[[changelog]]
== Changelog


[[release-next]]
[float]
=== Unreleased
https://github.com/elastic/apm-agent-python/compare/v2.1.1\...master[Check the HEAD diff]

 * added Flask 1.0 to the test matrix ({pull}207[#207])

[[release-2.1.1]]
[float]
=== v2.1.1
 * fixed bug in Django management command that would be triggered on Django 1.10 or 1.11 while using
   the `MIDDLEWARE_CLASSES` setting ({issue}186[#186], {pull}187[#187])
 * fix an encoding issue with log messages that are hit in rare cases ({issue}188[#188], {pull}189[#189])

[[release-2.1.0]]
[float]
=== v2.1.0

 * made skipping of initial `elasticapm` frames for span stack traces more generic ({pull}167[#167])
 * added `context.process.ppid` field (supported in apm-server 6.3+) ({pull}168[#168])
 * added option to disable stack frame collection for very short spans ({pull}142[#142])
 * several bug fixes:
 ** fix an issue in boto3 instrumentation with nonstandard endpoint URLs ({pull}178[#178])
 ** fix bug with OPTIONS requests and body capturing  ({pull}174[#174])
 ** fix issue when message has `%` character, but no params ({pull}175[#175])

[[release-2.0.1]]
[float]
=== v2.0.1
https://github.com/elastic/apm-agent-python/compare/v2.0.0\...v2.0.1[Check the diff]

 * fixed compatibility issue with aiohttp 3.0 ({pull}157[#157])
 * Added truncation for fields that have a `maxLength` in the JSON Schema ({pull}159[#159])


[[release-2.0.0]]
[float]
=== v2.0.0
https://github.com/elastic/apm-agent-python/compare/v1.0.0\...v2.0.0[Check the diff]

 * moved the library-frame detection from a processor to the stacktrace collection ({pull}113[#113]).
 * added settings to enable/disable source code collection and local variables collection
   for errors and transactions ({pull}117[#117])
 * added `service.environment` to provide an environment name (e.g. "production", "staging") ({pull}123[#123])