@@ -60,7 +60,8 @@ def _scan_for_table_with_tokens(tokens, keyword):
 
 
 def tokenize(sql):
-    return [t for t in re.split("(\W)", sql) if t != '']
+    # split on anything that is not a word character, excluding dots
+    return [t for t in re.split("([^\w.])", sql) if t != '']
 
 
 def scan(tokens):
